--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@nestjs/core": "^7.6.16",
     "@nestjs/microservices": "^7.6.16",
     "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.16",
     "@nestjs/schedule": "^0.4.3",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.7.1",
     "cheerio": "^1.0.0-rc.9",
     "mongoose": "^5.12.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rss-parser": "^3.12.0",
     "rxjs": "~6.6.3",
@@ -59,6 +62,7 @@
     "@types/cheerio": "^0.22.28",
     "@types/jest": "26.0.23",
     "@types/node": "15.3.0",
+    "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
     "dotenv": "9.0.2",
