--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@feeds/discover": ["libs/discover/src/index.ts"],
       "@feeds/article": ["libs/article/src/index.ts"],
       "@feeds/database": ["libs/database/src/index.ts"],
-      "@feeds/feed": ["libs/feed/src/index.ts"]
+      "@feeds/feed": ["libs/feed/src/index.ts"],
+      "@feeds/authentication": ["libs/authentication/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
