--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,8 @@
       "@feeds/article": ["libs/article/src/index.ts"],
       "@feeds/database": ["libs/database/src/index.ts"],
       "@feeds/feed": ["libs/feed/src/index.ts"],
-      "@feeds/authentication": ["libs/authentication/src/index.ts"]
+      "@feeds/authentication": ["libs/authentication/src/index.ts"],
+      "@feeds/user": ["libs/user/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
