--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@nestjs/common": "^7.6.16",
     "@nestjs/core": "^7.6.16",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/microservices": "^7.6.16",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
@@ -40,6 +41,7 @@
     "cheerio": "^1.0.0-rc.9",
     "mongoose": "^5.12.9",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rss-parser": "^3.12.0",
@@ -62,6 +64,7 @@
     "@types/cheerio": "^0.22.28",
     "@types/jest": "26.0.23",
     "@types/node": "15.3.0",
+    "@types/passport-jwt": "^3.0.5",
     "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
