--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/schedule": "^0.4.3",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.7.1",
+    "bcrypt": "^5.0.1",
     "cheerio": "^1.0.0-rc.9",
     "mongoose": "^5.12.9",
     "passport": "^0.4.1",
@@ -61,6 +62,7 @@
     "@nrwl/workspace": "12.3.3",
     "@types/amqp-connection-manager": "^2.0.10",
     "@types/amqplib": "^0.5.17",
+    "@types/bcrypt": "^5.0.0",
     "@types/cheerio": "^0.22.28",
     "@types/jest": "26.0.23",
     "@types/node": "15.3.0",
